# appsody-rust-ce-functions

./: README.md  stack.yaml
templates/function/: Cargo.toml
templates/simple/src/: main.rs
