[package]
name = "rust-simple"
version = "0.1.0"
authors = ["Name <name@email.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "^0.3"
actix-web = "2.0.0-alpha.1"
faas_rust = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "macro"}
faas_rust_macro = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "macro"}
cloudevent = { git = "https://github.com/openshift-cloud-functions/faas-rust-runtime", branch = "macro"}

[[bin]]
name = "rust-simple"
path = "src/main.rs"